<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/jagung"
                android:scaleType="fitXY"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="250dp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:background="@drawable/layout_background"
                android:gravity="bottom" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="27sp"
                android:text="Jagung Rebus Keju"
                android:layout_marginLeft="34dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="280dp"
                android:layout_marginBottom="4dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="330dp"
                android:layout_marginRight="34dp"
                android:layout_marginBottom="8dp"
                android:text="Resep jagung rebus keju merupakan salah satu resep makanan nikmat yang digandrungi hampir semua kalangan, baik anak-anak maupun orang dewasa. Jagung rebus keju mudah didapatkan, kerap dijumpai di warung kaki lima, pusat perbelanjaan ataupun mall.
                              Jagung rebus keju pun terbilang cukup sederhana dengan rasa yang manis dari keju sehingga menggugah selera. Jika dulunya jagung bisa dibakar, sekarang pun bisa hanya direbus kemudian diberi keju.
                              Jika diperhatikan, cara membuat jagung rebus keju memang sangat mudah dan tidak memakan waktu lama. Jagung hanya direbus dan divariasikan dengan toping sesuai dengan pilihan rasanya."
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="560dp"
                android:layout_marginRight="35dp"
                android:layout_gravity="right"
                android:text="Lihat selengkapnya"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="590dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="Diposting Oleh "
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="635dp"
                android:text="Sukma Ananda Putri"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="620dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/profile_image" />

            <ImageButton
                android:layout_width="354dp"
                android:layout_height="71dp"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="680dp"
                android:layout_marginRight="34dp"
                android:layout_marginBottom="8dp"
                android:background="#EFB62A" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="695dp"
                android:layout_marginLeft="55dp"
                android:layout_marginRight="50dp"
                android:text="Lebih percaya diri di dapur… Temukan resep yang sudah diuji oleh komunitas di Premium"
                android:textSize="16dp"
                android:textColor="@color/white"
                android:textStyle="italic">
            </TextView>
        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="34dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:text="Bahan-bahan"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/text_bahan"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="Alat dan Perlengkapan"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/text_alatdanperlengkapan"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:text="Cara Memasak"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"/>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:adjustViewBounds="true"
                android:src="@drawable/jagung_dipotong"
                android:scaleType="fitXY"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="34dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_caramemasak0"
                android:layout_marginRight="34dp"
                android:textColor="@android:color/black" />
    </TableRow>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"/>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:adjustViewBounds="true"
                android:src="@drawable/jagung_direbus"
                android:scaleType="fitXY"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="34dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_caramemasak1"
                android:layout_marginRight="34dp"
                android:textColor="@android:color/black" />
        </TableRow>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"/>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:adjustViewBounds="true"
                android:src="@drawable/jagung_ditiriskan"
                android:scaleType="fitXY"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="34dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_caramemasak2"
                android:layout_marginRight="34dp"
                android:textColor="@android:color/black" />
        </TableRow>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"/>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:adjustViewBounds="true"
                android:src="@drawable/jagung"
                android:scaleType="fitXY"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="34dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_caramemasak3"
                android:layout_marginRight="34dp"
                android:textColor="@android:color/black" />
            </TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/text_thankyou"
            android:gravity="center"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:layout_marginBottom="4dp"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_gravity="top"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="-1650dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:background="@drawable/back"
            android:gravity="bottom"
            android:scaleType="fitXY"></ImageView>

        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_gravity="top"
            android:layout_marginLeft="270dp"
            android:layout_marginTop="-55dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:background="@drawable/camera"
            android:gravity="bottom"
            android:scaleType="fitXY"></ImageView>
        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_gravity="top"
            android:layout_marginLeft="310dp"
            android:layout_marginTop="-45dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:background="@drawable/save"
            android:gravity="bottom"
            android:scaleType="fitXY"></ImageView>
        <ImageView
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_gravity="top"
            android:layout_marginLeft="350dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="-45dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:background="@drawable/dot"
            android:gravity="bottom"
            android:scaleType="fitXY"></ImageView>
    </LinearLayout>
</ScrollView>